Finalized deployment configuration, release 0.0.1

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,15 +2,15 @@ ktor {
     deployment {
         port = 8080
         sslPort = 8443
-        rootPath = "/"
     }
+
     application {
         modules = [ app.wilmo.ApplicationKt.module ]
     }
 
     security {
         ssl {
-            keyStore = keystore.jks
+            keyStore = keystore/keystore.jks
             keyAlias = ${SSL_ALIAS}
             keyStorePassword = ${SSL_PASSWORD}
             privateKeyPassword = ${SSL_PASSWORD}
